<resources>
    <string name="app_name">GADS Leaderboard</string>


    <string name="toolbar_submit">Submit</string>
    <string name="toolbar_title">LEADERBOARD</string>
    <string name="tab_learning">Learning Leaders</string>
    <string name="tab_skill">Skill IQ Leaders</string>

    <string name="learning_hours">learning hours</string>
    <string name="skill_iq_score">skill IQ score</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_failed">Submission Failed</string>
    <string name="error_message">Oops, something went wrong!</string>
    <string name="fill_all_fields">All fields must be filled!</string>

</resources>
