<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".SubmissionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_submission"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/tv_submission_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <ImageView
            android:id="@+id/submission_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            android:src="@drawable/gads_header_ico" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_submission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/project_submission"
        android:textColor="@color/colorOrange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_submission" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_submission_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:weightSum="100"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_submission_title">


        <EditText
            android:id="@+id/et_first_name"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_last_name"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="50"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_email"
        style="@style/MyEditTextStyle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_project_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/et_project_link"
        style="@style/MyEditTextStyle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/project_on_github_link"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_project_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_project_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="16dp"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorOrange"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:paddingEnd="48dp"
        android:paddingStart="48dp"
        android:text="@string/toolbar_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_project_link" />


</androidx.constraintlayout.widget.ConstraintLayout>